src/main/java/com/generator/generators/protobuf/parser/ProtobufParser.java
// Generated from src/com/generator/generators/protobuf/parser/Protobuf.g4 by ANTLR 4.1
package com.generator.generators.protobuf.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProtobufParser extends Parser {
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__18 = 1, T__17 = 2, T__16 = 3, T__15 = 4, T__14 = 5, T__13 = 6, T__12 = 7, T__11 = 8,
            T__10 = 9, T__9 = 10, T__8 = 11, T__7 = 12, T__6 = 13, T__5 = 14, T__4 = 15, T__3 = 16,
            T__2 = 17, T__1 = 18, T__0 = 19, FIELDRULE = 20, INT = 21, ID = 22, WS = 23, SL_COMMENT = 24;
    public static final String[] tokenNames = {
            "<INVALID>", "'import'", "']'", "'max'", "'extensions'", "'.'", "'default'",
            "'['", "'-'", "'='", "';'", "'extend'", "'package'", "'to'", "'{'", "'message'",
            "'option'", "'}'", "'\"'", "'enum'", "FIELDRULE", "INT", "ID", "WS", "SL_COMMENT"
    };
    public static final int
            RULE_file = 0, RULE_packageDecl = 1, RULE_packageName = 2, RULE_option = 3,
            RULE_imports = 4, RULE_message = 5, RULE_enumName = 6, RULE_messageContent = 7,
            RULE_property = 8, RULE_defaultValue = 9, RULE_extensions = 10, RULE_propertyName = 11,
            RULE_propertyType = 12, RULE_extensionMax = 13;
    public static final String[] ruleNames = {
            "file", "packageDecl", "packageName", "option", "imports", "message",
            "enumName", "messageContent", "property", "defaultValue", "extensions",
            "propertyName", "propertyType", "extensionMax"
    };

    @Override
    public String getGrammarFileName() {
        return "Protobuf.g4";
    }

    @Override
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }


    public enum FieldRules {required, optional, repeated}

    public void packageName(String name) {
    }

    public void option(String name, String value) {
    }

    public void imports(String name) {
    }

    public void newMessage(String name, String comment) {
    }

    public void newExtension(String name) {
    }

    public void newProperty(FieldRules rule, String propertyType, String propertyName, Integer ordinal, String comment, String parent, String defaultValue) {
    }

    public void endMessage() {
    }

    public void newExtensions(String min, String max) {
    }

    public void endExtension() {
    }

    public void newEnum(String name, String comment) {
    }

    public void newEnumValue(String name, Integer ordinal, String comment) {
    }

    public void endEnum() {
    }

    public void end() {
    }

    private String getDefaultValue(String text) {
        //'[' 'default' '=' (ID|INT|'-'|'"')+ ']'
        return text.substring(text.indexOf("=") + 1, text.length() - 1);
    }

    public static TokenStream createLexer(java.io.Reader reader) throws java.io.IOException {
        final ANTLRInputStream input = new ANTLRInputStream(reader);
        final ProtobufLexer lexer = new ProtobufLexer(input);
        return new CommonTokenStream(lexer);
    }

    public ProtobufParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class FileContext extends ParserRuleContext {
        public List<MessageContext> message() {
            return getRuleContexts(MessageContext.class);
        }

        public List<ImportsContext> imports() {
            return getRuleContexts(ImportsContext.class);
        }

        public PackageDeclContext packageDecl() {
            return getRuleContext(PackageDeclContext.class, 0);
        }

        public List<OptionContext> option() {
            return getRuleContexts(OptionContext.class);
        }

        public OptionContext option(int i) {
            return getRuleContext(OptionContext.class, i);
        }

        public MessageContext message(int i) {
            return getRuleContext(MessageContext.class, i);
        }

        public ImportsContext imports(int i) {
            return getRuleContext(ImportsContext.class, i);
        }

        public FileContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_file;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).enterFile(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).exitFile(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufVisitor) return ((ProtobufVisitor<? extends T>) visitor).visitFile(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FileContext file() throws RecognitionException {
        FileContext _localctx = new FileContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_file);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(29);
                _la = _input.LA(1);
                if (_la == 12) {
                    {
                        setState(28);
                        packageDecl();
                    }
                }

                setState(34);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == 16) {
                    {
                        {
                            setState(31);
                            option();
                        }
                    }
                    setState(36);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(40);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == 1) {
                    {
                        {
                            setState(37);
                            imports();
                        }
                    }
                    setState(42);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(44);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(43);
                            message();
                        }
                    }
                    setState(46);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 11) | (1L << 15) | (1L << 19) | (1L << SL_COMMENT))) != 0));
                end();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PackageDeclContext extends ParserRuleContext {
        public PackageNameContext packageName;

        public PackageNameContext packageName() {
            return getRuleContext(PackageNameContext.class, 0);
        }

        public PackageDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_packageDecl;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).enterPackageDecl(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).exitPackageDecl(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufVisitor)
                return ((ProtobufVisitor<? extends T>) visitor).visitPackageDecl(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PackageDeclContext packageDecl() throws RecognitionException {
        PackageDeclContext _localctx = new PackageDeclContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_packageDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(50);
                match(12);
                setState(51);
                ((PackageDeclContext) _localctx).packageName = packageName();
                packageName((((PackageDeclContext) _localctx).packageName != null ? _input.getText(((PackageDeclContext) _localctx).packageName.start, ((PackageDeclContext) _localctx).packageName.stop) : null));
                setState(53);
                match(10);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PackageNameContext extends ParserRuleContext {
        public List<TerminalNode> ID() {
            return getTokens(ProtobufParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(ProtobufParser.ID, i);
        }

        public PackageNameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_packageName;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).enterPackageName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).exitPackageName(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufVisitor)
                return ((ProtobufVisitor<? extends T>) visitor).visitPackageName(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PackageNameContext packageName() throws RecognitionException {
        PackageNameContext _localctx = new PackageNameContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_packageName);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(55);
                match(ID);
                setState(60);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == 5) {
                    {
                        {
                            setState(56);
                            match(5);
                            setState(57);
                            match(ID);
                        }
                    }
                    setState(62);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OptionContext extends ParserRuleContext {
        public PropertyNameContext propertyName;
        public Token ID;

        public TerminalNode ID() {
            return getToken(ProtobufParser.ID, 0);
        }

        public PropertyNameContext propertyName() {
            return getRuleContext(PropertyNameContext.class, 0);
        }

        public OptionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_option;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).enterOption(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).exitOption(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufVisitor) return ((ProtobufVisitor<? extends T>) visitor).visitOption(this);
            else return visitor.visitChildren(this);
        }
    }

    public final OptionContext option() throws RecognitionException {
        OptionContext _localctx = new OptionContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_option);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(63);
                match(16);
                setState(64);
                ((OptionContext) _localctx).propertyName = propertyName();
                setState(65);
                match(9);
                setState(66);
                ((OptionContext) _localctx).ID = match(ID);
                option((((OptionContext) _localctx).propertyName != null ? _input.getText(((OptionContext) _localctx).propertyName.start, ((OptionContext) _localctx).propertyName.stop) : null), ((OptionContext) _localctx).ID.getText());
                setState(68);
                match(10);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ImportsContext extends ParserRuleContext {
        public Token ID;

        public TerminalNode ID() {
            return getToken(ProtobufParser.ID, 0);
        }

        public ImportsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_imports;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).enterImports(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).exitImports(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufVisitor) return ((ProtobufVisitor<? extends T>) visitor).visitImports(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ImportsContext imports() throws RecognitionException {
        ImportsContext _localctx = new ImportsContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_imports);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(70);
                match(1);
                setState(71);
                match(18);
                setState(72);
                ((ImportsContext) _localctx).ID = match(ID);
                setState(73);
                match(18);
                imports(((ImportsContext) _localctx).ID.getText());
                setState(75);
                match(10);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class MessageContext extends ParserRuleContext {
        public Token SL_COMMENT;
        public Token ID;

        public EnumNameContext enumName(int i) {
            return getRuleContext(EnumNameContext.class, i);
        }

        public TerminalNode ID() {
            return getToken(ProtobufParser.ID, 0);
        }

        public TerminalNode SL_COMMENT(int i) {
            return getToken(ProtobufParser.SL_COMMENT, i);
        }

        public MessageContentContext messageContent(int i) {
            return getRuleContext(MessageContentContext.class, i);
        }

        public List<EnumNameContext> enumName() {
            return getRuleContexts(EnumNameContext.class);
        }

        public List<MessageContentContext> messageContent() {
            return getRuleContexts(MessageContentContext.class);
        }

        public List<TerminalNode> SL_COMMENT() {
            return getTokens(ProtobufParser.SL_COMMENT);
        }

        public MessageContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_message;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).enterMessage(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).exitMessage(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufVisitor) return ((ProtobufVisitor<? extends T>) visitor).visitMessage(this);
            else return visitor.visitChildren(this);
        }
    }

    public final MessageContext message() throws RecognitionException {
        MessageContext _localctx = new MessageContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_message);
        int _la;
        try {
            setState(131);
            switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(78);
                    _la = _input.LA(1);
                    if (_la == SL_COMMENT) {
                        {
                            setState(77);
                            ((MessageContext) _localctx).SL_COMMENT = match(SL_COMMENT);
                        }
                    }

                    setState(80);
                    match(15);
                    setState(81);
                    ((MessageContext) _localctx).ID = match(ID);
                    newMessage(((MessageContext) _localctx).ID.getText(), ((MessageContext) _localctx).SL_COMMENT != null ? ((MessageContext) _localctx).SL_COMMENT.getText() : null);
                    setState(83);
                    match(14);
                    setState(85);
                    switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                        case 1: {
                            setState(84);
                            ((MessageContext) _localctx).SL_COMMENT = match(SL_COMMENT);
                        }
                        break;
                    }
                    setState(88);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(87);
                                messageContent();
                            }
                        }
                        setState(90);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 11) | (1L << 15) | (1L << 19) | (1L << FIELDRULE) | (1L << SL_COMMENT))) != 0));
                    setState(92);
                    match(17);
                    endMessage();
                }
                break;

                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(96);
                    _la = _input.LA(1);
                    if (_la == SL_COMMENT) {
                        {
                            setState(95);
                            ((MessageContext) _localctx).SL_COMMENT = match(SL_COMMENT);
                        }
                    }

                    setState(98);
                    match(19);
                    setState(99);
                    ((MessageContext) _localctx).ID = match(ID);
                    newEnum(((MessageContext) _localctx).ID.getText(), ((MessageContext) _localctx).SL_COMMENT != null ? ((MessageContext) _localctx).SL_COMMENT.getText() : null);
                    setState(101);
                    match(14);
                    setState(103);
                    _la = _input.LA(1);
                    if (_la == SL_COMMENT) {
                        {
                            setState(102);
                            ((MessageContext) _localctx).SL_COMMENT = match(SL_COMMENT);
                        }
                    }

                    setState(106);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(105);
                                enumName();
                            }
                        }
                        setState(108);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == ID);
                    setState(110);
                    match(17);
                    endEnum();
                }
                break;

                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(114);
                    _la = _input.LA(1);
                    if (_la == SL_COMMENT) {
                        {
                            setState(113);
                            match(SL_COMMENT);
                        }
                    }

                    setState(116);
                    match(11);
                    setState(117);
                    ((MessageContext) _localctx).ID = match(ID);
                    newExtension(((MessageContext) _localctx).ID.getText());
                    setState(119);
                    match(14);
                    setState(121);
                    switch (getInterpreter().adaptivePredict(_input, 12, _ctx)) {
                        case 1: {
                            setState(120);
                            match(SL_COMMENT);
                        }
                        break;
                    }
                    setState(124);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(123);
                                messageContent();
                            }
                        }
                        setState(126);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 11) | (1L << 15) | (1L << 19) | (1L << FIELDRULE) | (1L << SL_COMMENT))) != 0));
                    setState(128);
                    match(17);
                    endExtension();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class EnumNameContext extends ParserRuleContext {
        public Token ID;
        public Token INT;
        public Token SL_COMMENT;

        public TerminalNode INT() {
            return getToken(ProtobufParser.INT, 0);
        }

        public TerminalNode ID() {
            return getToken(ProtobufParser.ID, 0);
        }

        public TerminalNode SL_COMMENT() {
            return getToken(ProtobufParser.SL_COMMENT, 0);
        }

        public EnumNameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_enumName;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).enterEnumName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).exitEnumName(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufVisitor) return ((ProtobufVisitor<? extends T>) visitor).visitEnumName(this);
            else return visitor.visitChildren(this);
        }
    }

    public final EnumNameContext enumName() throws RecognitionException {
        EnumNameContext _localctx = new EnumNameContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_enumName);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(133);
                ((EnumNameContext) _localctx).ID = match(ID);
                setState(134);
                match(9);
                setState(135);
                ((EnumNameContext) _localctx).INT = match(INT);
                setState(136);
                match(10);
                setState(138);
                _la = _input.LA(1);
                if (_la == SL_COMMENT) {
                    {
                        setState(137);
                        ((EnumNameContext) _localctx).SL_COMMENT = match(SL_COMMENT);
                    }
                }

                newEnumValue(((EnumNameContext) _localctx).ID.getText(), Integer.valueOf(((EnumNameContext) _localctx).INT.getText()), ((EnumNameContext) _localctx).SL_COMMENT != null ? ((EnumNameContext) _localctx).SL_COMMENT.getText() : null);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class MessageContentContext extends ParserRuleContext {
        public MessageContext message() {
            return getRuleContext(MessageContext.class, 0);
        }

        public ExtensionsContext extensions() {
            return getRuleContext(ExtensionsContext.class, 0);
        }

        public PropertyContext property() {
            return getRuleContext(PropertyContext.class, 0);
        }

        public MessageContentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_messageContent;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).enterMessageContent(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).exitMessageContent(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufVisitor)
                return ((ProtobufVisitor<? extends T>) visitor).visitMessageContent(this);
            else return visitor.visitChildren(this);
        }
    }

    public final MessageContentContext messageContent() throws RecognitionException {
        MessageContentContext _localctx = new MessageContentContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_messageContent);
        try {
            setState(145);
            switch (_input.LA(1)) {
                case FIELDRULE:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(142);
                    property();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(143);
                    extensions();
                }
                break;
                case 11:
                case 15:
                case 19:
                case SL_COMMENT:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(144);
                    message();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PropertyContext extends ParserRuleContext {
        public Token FIELDRULE;
        public PropertyTypeContext propertyType;
        public Token ID;
        public Token INT;
        public DefaultValueContext defaultValue;
        public Token SL_COMMENT;

        public DefaultValueContext defaultValue() {
            return getRuleContext(DefaultValueContext.class, 0);
        }

        public TerminalNode INT() {
            return getToken(ProtobufParser.INT, 0);
        }

        public TerminalNode ID() {
            return getToken(ProtobufParser.ID, 0);
        }

        public TerminalNode FIELDRULE() {
            return getToken(ProtobufParser.FIELDRULE, 0);
        }

        public TerminalNode SL_COMMENT() {
            return getToken(ProtobufParser.SL_COMMENT, 0);
        }

        public PropertyTypeContext propertyType() {
            return getRuleContext(PropertyTypeContext.class, 0);
        }

        public PropertyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_property;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).enterProperty(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).exitProperty(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufVisitor) return ((ProtobufVisitor<? extends T>) visitor).visitProperty(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PropertyContext property() throws RecognitionException {
        PropertyContext _localctx = new PropertyContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_property);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(147);
                ((PropertyContext) _localctx).FIELDRULE = match(FIELDRULE);
                setState(148);
                ((PropertyContext) _localctx).propertyType = propertyType();
                setState(149);
                ((PropertyContext) _localctx).ID = match(ID);
                setState(150);
                match(9);
                setState(151);
                ((PropertyContext) _localctx).INT = match(INT);
                setState(153);
                _la = _input.LA(1);
                if (_la == 7) {
                    {
                        setState(152);
                        ((PropertyContext) _localctx).defaultValue = defaultValue();
                    }
                }

                setState(155);
                match(10);
                setState(157);
                switch (getInterpreter().adaptivePredict(_input, 18, _ctx)) {
                    case 1: {
                        setState(156);
                        ((PropertyContext) _localctx).SL_COMMENT = match(SL_COMMENT);
                    }
                    break;
                }
                newProperty(FieldRules.valueOf(((PropertyContext) _localctx).FIELDRULE.getText()), (((PropertyContext) _localctx).propertyType != null ? _input.getText(((PropertyContext) _localctx).propertyType.start, ((PropertyContext) _localctx).propertyType.stop) : null), ((PropertyContext) _localctx).ID.getText(), Integer.valueOf(((PropertyContext) _localctx).INT.getText()), ((PropertyContext) _localctx).SL_COMMENT != null ? ((PropertyContext) _localctx).SL_COMMENT.getText() : null, (((PropertyContext) _localctx).propertyType != null ? _input.getText(((PropertyContext) _localctx).propertyType.start, ((PropertyContext) _localctx).propertyType.stop) : null).contains(".") ? (((PropertyContext) _localctx).propertyType != null ? _input.getText(((PropertyContext) _localctx).propertyType.start, ((PropertyContext) _localctx).propertyType.stop) : null).substring(0, (((PropertyContext) _localctx).propertyType != null ? _input.getText(((PropertyContext) _localctx).propertyType.start, ((PropertyContext) _localctx).propertyType.stop) : null).lastIndexOf(".")) : null, (((PropertyContext) _localctx).defaultValue != null ? _input.getText(((PropertyContext) _localctx).defaultValue.start, ((PropertyContext) _localctx).defaultValue.stop) : null) == null ? null : getDefaultValue((((PropertyContext) _localctx).defaultValue != null ? _input.getText(((PropertyContext) _localctx).defaultValue.start, ((PropertyContext) _localctx).defaultValue.stop) : null)));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DefaultValueContext extends ParserRuleContext {
        public List<TerminalNode> INT() {
            return getTokens(ProtobufParser.INT);
        }

        public List<TerminalNode> ID() {
            return getTokens(ProtobufParser.ID);
        }

        public TerminalNode INT(int i) {
            return getToken(ProtobufParser.INT, i);
        }

        public TerminalNode ID(int i) {
            return getToken(ProtobufParser.ID, i);
        }

        public DefaultValueContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_defaultValue;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).enterDefaultValue(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProtobufListener) ((ProtobufListener) listener).exitDefaultValue(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProtobufVisitor)
                return ((ProtobufVisitor<? extends T>) visitor).visitDefaultValue(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DefaultValueContext defaultValue() throws RecognitionException {
        DefaultValueContext _localctx = new DefaultValueContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_defaultValue);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(161);
                match(7);
                setState(162);
                match(6);
                setState(163);
                match(9);
                setState(165);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(164);
                            _la = _input.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 8) | (1L << 18) | (1L << INT) | (1L << ID))) != 0))) {
                                _errHandler.recoverInline(this);
                            }
                            consume();
                        }
                    }
                    setState(167);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 8) | (1L << 18) | (1L << INT) | (1L << ID))) != 0));
                setState(169);
                match(2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
